--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -151,6 +151,12 @@ a#scrollUp i{
 .header-middle .container .row .col-sm-8 {
 	padding-right:0;
 }
+.container .row3{
+      margin-right: -15px;
+      margin-left: -15px;
+      margin-bottom: 50px;
+  
+}
 
 .usa {
   border-radius: 0;
