two members for team

--- a/public/backend/css/style.css
+++ b/public/backend/css/style.css
@@ -753,7 +753,7 @@ ul.top-menu>li>a:hover,ul.top-menu>li>a:focus {
     color:#fff;
    text-align: left;
 }
-.market-update-right i.fa.fa-usd {
+.market-update-right i.fa.fa-dropbox {
      font-size:3em;
     color:#fff;
     text-align: left;
