--- a/public/frontend/css/main.css
+++ b/public/frontend/css/main.css
@@ -8,11 +8,14 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background:;
+  background:#FFF;
   position: relative;
   font-weight:400px;
 }
-
+.huydon {
+  padding-bottom: 22px;
+  text-align:center;
+}
 ul li {
   list-style: none;
 }
@@ -862,6 +865,7 @@ h2.title {
 
 .single-products {
   position: relative;
+  height:400px
 }
 
 .new, .sale {
